# sofastcar-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.py  deploy_jh.py  deploy_sw.py  pyproject.toml  requirements.txt
.config/: gunicorn.py  sofastcar.nginx  supervisord.conf
app/cars/: admin.py  models.py  serializers.py  tests.py  views.py
app/cars/migrations/: 0001_initial.py  0002_auto_20200909_1412.py  0002_auto_20200912_1029.py  0002_cartimetable.py  0002_photobeforeuse.py  0003_auto_20200913_0634.py  0003_cartimetable_zone.py  0004_auto_20200913_0720.py  0005_auto_20200913_1401.py  0006_auto_20200913_1406.py
app/carzones/: admin.py  apps.py  crawling.py  models.py  serializers.py  tests.py  views.py
app/carzones/migrations/: 0001_initial.py  0002_auto_20200827_1907.py  0002_auto_20200912_1029.py  0003_auto_20200913_1401.py  0003_remove_carzone_blog_page.py  0004_auto_20200913_1406.py  0004_carzone_operating_time.py  0005_carzone_sub_info.py
app/carzones/migratons/: 0001_initial.py
app/config/: settings.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py  dev_test.py  staging.py
app/config/wsgi/: dev.py  staging.py
app/core/: docs.py  exceptions.py  permissions.py  urls.py  utils.py
app/events/: admin.py  models.py  serializers.py  tests.py  views.py
app/members/: admin.py  models.py  serializers.py  tests.py  views.py
app/payment/: models.py  serializers.py  urls.py  views.py
app/payments/: admin.py  models.py  serializers.py  views.py
app/prices/: admin.py  models.py  serializers.py  tests.py  views.py
app/reservations/: admin.py  exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
(+21 files in other folders)
